php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #32455 wrong setting property to unset value
Submitted: 2005-03-25 15:17 UTC Modified: 2005-10-11 12:16 UTC
From: becicka at aarongroup dot cz Assigned: dmitry (profile)
Status: Closed Package: SOAP related
PHP Version: 5CVS-2005-03-31 OS: *
Private report: No CVE-ID: None
 [2005-03-25 15:17 UTC] becicka at aarongroup dot cz
Description:
------------
When I set a object property to unseted variable and than I call a SOAP function with this paramater, I get message
Fatal error: SOAP-ERROR: Encoding: object hasn't 'name' property .

Reproduce code:
---------------
class Passenger {
    var $name;
}


$wsdl =& new SoapClient(WSDL_LOCATION, array("trace" => 1, 'exceptions' => 0));
$p = new Passenger;
/* if ($xyz === null) $xyz = null; //if here is this row, it's works fine otherwise calling SOAP function failed */
$p->name = $xyz;    //$xyz is not set!!!
$wsdl->setPassenger($p);   //call SOAP function failed


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-03-25 23:34 UTC] sniper@php.net
Please try using this CVS snapshot:

  http://snaps.php.net/php5-latest.tar.gz
 
For Windows:
 
  http://snaps.php.net/win32/php5-win32-latest.zip


 [2005-04-01 10:58 UTC] becicka at aarongroup dot cz
I try this (http://snaps.php.net/php5-latest.tar.gz) and there are the same situation.
 [2005-04-03 18:25 UTC] tony2001@php.net
Assigning to the maintainer.
 [2005-04-20 16:28 UTC] dmitry@php.net
I need to look into WSDL file to understand the bug.
Can you email it to me.
 [2005-06-20 10:15 UTC] becicka at aarongroup dot cz
I'm sorry to response too late. I send You requested email.
 [2005-10-11 12:16 UTC] dmitry@php.net
Fixed in CVS HEAD and PHP_5_1.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 18 18:00:01 2026 UTC