Fixed bug #32455 (wrong setting property to unset value)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@198173 c90b9560-bf6c-de11-be94-00142212c4b1